Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1535

Can't set hostname on SASL-INIT through sasl plugin interface

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • proton-c-0.18.0
    • proton-c
    • None

    Description

      There is no way to set the hostname in the SASL-INIT frame that is sent out by proton. This is needed if the server will use that hostname to determine the realm/domain against which to authenticate in a multi-tenant environment.

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: