PROTON-1535: allow plugins to set the hostname sent out in sasl-int frames